# Programming-Methodology

./: README.md  bai01
10 labs of C code/: CMakeLists.txt
10 labs of C code/lab 03/: lab3  lab3.c  test  test.c
10 labs of C code/lab 03/lab3.dSYM/Contents/Resources/DWARF/: lab3
10 labs of C code/lab 04/: array  array.c  test  test.c
midterm 1/: cau1  cau1.c  cau2  cau2.c  cau3  cau3.c  cau5.c  cau8.c  test
